<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.LoginActivity">
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_networks"
        android:orderInCategory="300"
        android:title="@string/networks_title"
        android:icon="@drawable/ic_baseline_device_hub_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_user"
        android:orderInCategory="300"
        android:title="@string/user_title"
        android:icon="@drawable/ic_baseline_account_circle_24"
        app:showAsAction="ifRoom" />
</menu>