<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar" />

    <TextView
        android:id="@+id/emailAddressTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/email_address_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/emailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressTitle"
        app:layout_constraintLeft_toLeftOf="@+id/emailAddressTitle"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/fullNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/full_name_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fullNameTitle"
        app:layout_constraintLeft_toLeftOf="@+id/emailAddressTitle"
        android:layout_marginLeft="30dp"
        android:textSize="20sp"
        android:layout_marginStart="20dp" />

    <Button
        android:id="@+id/signOut"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/primary"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>